# fintech-fraud-detection-monitoring-system

./: .dockerignore  .gitignore  .mailmap  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/project_guide/: dashboard_and_project_beginner_guide.md
scripts/: train_pipeline.py
src/fraud_monitoring/: __init__.py  config.py  dashboard_queries.py  data.py  database.py  features.py  hybrid.py  models.py  pipeline.py  rules.py
tests/: test_hybrid.py  test_rules.py
