[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech-fraud-detection-monitoring-system"
version = "0.1.0"
requires-python = ">=3.9,<3.13"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "streamlit==1.41.1",
  "joblib==1.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

