[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech-fraud-detection-monitoring-system"
version = "0.1.0"
requires-python = ">=3.9,<3.15"
dependencies = [
  "numpy>=1.26.4,<3",
  "pandas>=2.2.3,<3",
  "scikit-learn>=1.5.2,<2",
  "streamlit>=1.41.1,<2",
  "joblib>=1.5.3,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

